objects/mindtouch_sf__settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>MindTouch Settings.</description>
    <fields>
        <fullName>mindtouch_sf__Customer_Activity_ID_Field__c</fullName>
        <description>MindTouch UserID Field to query history API.</description>
        <label>Customer Activity ID Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mindtouch_sf__case_search_field__c</fullName>
        <defaultValue>&quot;Subject&quot;</defaultValue>
        <label>Case Search Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mindtouch_sf__publish_article_path__c</fullName>
        <description>Path in MindTouch site where Published Articles will be placed.</description>
        <label>Publish Article Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mindtouch_sf__search_constraint__c</fullName>
        <label>Search Constraint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mindtouch_sf__site_name__c</fullName>
        <description>The name of your MindTouch site</description>
        <label>Site Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mindtouch_sf__url__c</fullName>
        <defaultValue>&quot;https://yoursite.com&quot;</defaultValue>
        <description>URL to MindTouch Site</description>
        <label>MindTouch URL</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>MindTouch Settings</label>
</CustomObject>